--- a/notebooks/3_plotting.ipynb
+++ b/notebooks/3_plotting.ipynb
@@ -2495,11 +2495,7 @@
     "        \"test_data_split\": test_data_split\n",
     "    }\n",
     "\n",
-    "    if datasets == \"CheXpert\":\n",
-    "        datamodule = CheXpertDataModule(**dataset_parameters)\n",
-    "    elif datasets == \"MIMIC\":\n",
-    "        datamodule = MIMICDataModule(**dataset_parameters)\n",
-    "    elif datasets == \"MURA\":\n",
+    "    if datasets == \"MURA\":\n",
     "        datamodule = MURADataModule(**dataset_parameters)\n",
     "    elif datasets == \"ImageNette\":\n",
     "        datamodule = ImageNetteDataModule(**dataset_parameters)\n",
