--- a/notebooks/2_1_benchmarking.ipynb
+++ b/notebooks/2_1_benchmarking.ipynb
@@ -45,11 +45,8 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "\n",
-    "from torch.utils.data import dataset\n",
-    "from torch.utils.data import dataloader\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "from vitshapley.datamodules.CheXpert_datamodule import CheXpertDataModule\n",
     "from vitshapley.datamodules.ImageNette_datamodule import ImageNetteDataModule\n",
     "from vitshapley.datamodules.MURA_datamodule import MURADataModule\n",
     "\n",
@@ -59,7 +56,7 @@
     "from vitshapley.modules.explainer import Explainer\n",
     "\n",
     "from vitshapley.config import ex\n",
-    "from vitshapley.config import config, env_chanwkim, dataset_CheXpert, dataset_ImageNette, dataset_MURA\n",
+    "from vitshapley.config import config, env_chanwkim, dataset_ImageNette, dataset_MURA\n",
     "_config=config()\n",
     "\n",
     "dataset_split=\"test\"\n",
@@ -4756,7 +4753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
