--- a/notebooks/1_surrogate_sanity_check.ipynb
+++ b/notebooks/1_surrogate_sanity_check.ipynb
@@ -35,7 +35,6 @@
     "from torch.utils.data import Dataset\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "from vitshapley.datamodules.CheXpert_datamodule import CheXpertDataModule\n",
     "from vitshapley.datamodules.ImageNette_datamodule import ImageNetteDataModule\n",
     "\n",
     "from vitshapley.modules.classifier import Classifier\n",
@@ -43,7 +42,7 @@
     "from vitshapley.modules.explainer import Explainer\n",
     "\n",
     "from vitshapley.config import ex\n",
-    "from vitshapley.config import config, env_chanwkim, dataset_CheXpert, dataset_ImageNette\n",
+    "from vitshapley.config import config, env_chanwkim, dataset_ImageNette\n",
     "\n",
     "dataset_split=\"test\"\n",
     "backbone_to_use=[\"vit_base_patch16_224\"]\n",
@@ -418,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
