fixing bug of 1_surrogate_sanity_check.ipynb

--- a/notebooks/1_surrogate_sanity_check.ipynb
+++ b/notebooks/1_surrogate_sanity_check.ipynb
@@ -2,12 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f2b96013",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/homes/gws/chanwkim/vit-shapley/notebooks\n",
+      "/homes/gws/chanwkim/vit-shapley\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "print(os.getcwd())\n",
@@ -16,8 +25,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "12bbc88c",
+   "metadata": {},
+   "source": [
+    "# config"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "190e98ee",
    "metadata": {},
    "outputs": [],
@@ -35,14 +52,14 @@
     "from torch.utils.data import Dataset\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "from vitshapley.datamodules.ImageNette_datamodule import ImageNetteDataModule\n",
+    "from vit_shapley.datamodules.ImageNette_datamodule import ImageNetteDataModule\n",
     "\n",
-    "from vitshapley.modules.classifier import Classifier\n",
-    "from vitshapley.modules.surrogate import Surrogate\n",
-    "from vitshapley.modules.explainer import Explainer\n",
+    "from vit_shapley.modules.classifier import Classifier\n",
+    "from vit_shapley.modules.surrogate import Surrogate\n",
+    "from vit_shapley.modules.explainer import Explainer\n",
     "\n",
-    "from vitshapley.config import ex\n",
-    "from vitshapley.config import config, env_chanwkim, dataset_ImageNette\n",
+    "from vit_shapley.config import ex\n",
+    "from vit_shapley.config import config, env_chanwkim, dataset_ImageNette\n",
     "\n",
     "dataset_split=\"test\"\n",
     "backbone_to_use=[\"vit_base_patch16_224\"]\n",
@@ -56,31 +73,15 @@
     "_config.update({'classifier_backbone_type': None,\n",
     "                'classifier_download_weight': False,\n",
     "                'classifier_load_path': None})\n",
+    "_config.update({'classifier_masked_mask_location': \"pre-softmax\",\n",
+    "                'classifier_enable_pos_embed': True,\n",
+    "                })\n",
     "_config.update({'surrogate_mask_location': \"pre-softmax\"})\n",
     "_config.update({'surrogate_backbone_type': None,\n",
     "                'surrogate_download_weight': False,\n",
     "                'surrogate_load_path': None})\n",
     "_config.update({'explainer_num_mask_samples': 2,\n",
-    "                'explainer_paired_mask_samples': True})\n",
-    "print('done')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c99b9071",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "from collections import OrderedDict\n",
-    "import copy\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F"
+    "                'explainer_paired_mask_samples': True})"
    ]
   },
   {
@@ -115,10 +116,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "87361649",
+   "execution_count": 13,
+   "id": "0cf7ae4e",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "backbone_type_config_dict_=OrderedDict({\n",
+    "    \"vit_small_patch16_224\":{\n",
+    "        \"classifier_path\": \"results/wandb_transformer_interpretability_project/1yndrggu/checkpoints/epoch=14-step=2204.ckpt\",\n",
+    "        \"classifier_masked_path\": \"results/wandb_transformer_interpretability_project/fdm70w72/checkpoints/epoch=19-step=2939.ckpt\",\n",
+    "        \"surrogate_path\":{\n",
+    "            \"pre-softmax\": \"results/wandb_transformer_interpretability_project/3lfv4nmn/checkpoints/epoch=39-step=5879.ckpt\"\n",
+    "        },\n",
+    "        \"explainer_path\":\"results/wandb_transformer_interpretability_project/3biv2s85/checkpoints/epoch=60-step=9027.ckpt\"\n",
+    "\n",
+    "    },\n",
+    "    \"deit_small_patch16_224\":{\n",
+    "    },\n",
+    "    \"vit_base_patch16_224\":{\n",
+    "        \"classifier_path\": \"results/wandb_transformer_interpretability_project/2rq1issn/checkpoints/epoch=16-step=2498.ckpt\",\n",
+    "        \"classifier_masked_path\": \"results/wandb_transformer_interpretability_project/x59c992d/checkpoints/epoch=21-step=3233.ckpt\",\n",
+    "        \"surrogate_path\":{\n",
+    "            \"original\": \"results/wandb_transformer_interpretability_project/2rq1issn/checkpoints/epoch=16-step=2498.ckpt\",\n",
+    "            \"pre-softmax\": \"results/wandb_transformer_interpretability_project/3i6zzjnp/checkpoints/epoch=38-step=5732.ckpt\",\n",
+    "            \"zero-input\": \"results/wandb_transformer_interpretability_project/zyybgzcm/checkpoints/epoch=22-step=3380.ckpt\",\n",
+    "            \"zero-embedding\": \"results/wandb_transformer_interpretability_project/1gi5gmrm/checkpoints/epoch=36-step=5438.ckpt\"\n",
+    "            },\n",
+    "        \"explainer_path\": \"results/wandb_transformer_interpretability_project/3ty85eft/checkpoints/epoch=83-step=12431.ckpt\"\n",
+    "    },\n",
+    "    \"deit_base_patch16_224\":{\n",
+    "\n",
+    "    }\n",
+    "})   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "87361649",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1963"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def generate_mask(num_players: int, num_mask_samples: int or None = None, paired_mask_samples: bool = True,\n",
     "                  mode: str = 'uniform', random_state: np.random.RandomState or None = None) -> np.array:\n",
@@ -166,17 +214,41 @@
     "        return masks  # (num_samples, num_masks)\n",
     "\n",
     "\n",
+    "\n",
     "def set_datamodule(datasets,\n",
     "                   dataset_location,\n",
+    "                   explanation_location_train,\n",
+    "                   explanation_mask_amount_train,\n",
+    "                   explanation_mask_ascending_train,\n",
+    "                   \n",
+    "                   explanation_location_val,\n",
+    "                   explanation_mask_amount_val,\n",
+    "                   explanation_mask_ascending_val,                   \n",
+    "                   \n",
+    "                   explanation_location_test,\n",
+    "                   explanation_mask_amount_test,\n",
+    "                   explanation_mask_ascending_test,                   \n",
+    "                   \n",
     "                   transforms_train,\n",
     "                   transforms_val,\n",
     "                   transforms_test,\n",
     "                   num_workers,\n",
     "                   per_gpu_batch_size,\n",
     "                   test_data_split):\n",
-    "\n",
     "    dataset_parameters = {\n",
     "        \"dataset_location\": dataset_location,\n",
+    "        \"explanation_location_train\": explanation_location_train,\n",
+    "        \"explanation_mask_amount_train\": explanation_mask_amount_train,\n",
+    "        \"explanation_mask_ascending_train\": explanation_mask_ascending_train,\n",
+    "        \n",
+    "        \"explanation_location_val\": explanation_location_val,\n",
+    "        \"explanation_mask_amount_val\": explanation_mask_amount_val,\n",
+    "        \"explanation_mask_ascending_val\": explanation_mask_ascending_val,\n",
+    "        \n",
+    "        \"explanation_location_test\": explanation_location_test,\n",
+    "        \"explanation_mask_amount_test\": explanation_mask_amount_test,\n",
+    "        \"explanation_mask_ascending_test\": explanation_mask_ascending_test,        \n",
+    "        \n",
     "        \"transforms_train\": transforms_train,\n",
     "        \"transforms_val\": transforms_val,\n",
     "        \"transforms_test\": transforms_test,\n",
@@ -185,22 +257,34 @@
     "        \"test_data_split\": test_data_split\n",
     "    }\n",
     "\n",
-    "    if datasets == \"APTOS2019\":\n",
-    "        datamodule = APTOS2019DataModule(**dataset_parameters)\n",
-    "    elif datasets == \"CheXpert\":\n",
+    "    if datasets == \"CheXpert\":\n",
     "        datamodule = CheXpertDataModule(**dataset_parameters)\n",
     "    elif datasets == \"MIMIC\":\n",
     "        datamodule = MIMICDataModule(**dataset_parameters)\n",
-    "    elif datasets == \"CIFAR\":\n",
-    "        datamodule = CIFARDataModule(**dataset_parameters)\n",
+    "    elif datasets == \"MURA\":\n",
+    "        datamodule = MURADataModule(**dataset_parameters)\n",
     "    elif datasets == \"ImageNette\":\n",
     "        datamodule = ImageNetteDataModule(**dataset_parameters)\n",
     "    else:\n",
     "        ValueError(\"Invalid 'datasets' configuration\")\n",
     "    return datamodule\n",
     "\n",
+    "\n",
     "datamodule = set_datamodule(datasets=_config[\"datasets\"],\n",
     "                            dataset_location=_config[\"dataset_location\"],\n",
+    "\n",
+    "                            explanation_location_train=_config[\"explanation_location_train\"],\n",
+    "                            explanation_mask_amount_train=_config[\"explanation_mask_amount_train\"],\n",
+    "                            explanation_mask_ascending_train=_config[\"explanation_mask_ascending_train\"],\n",
+    "\n",
+    "                            explanation_location_val=_config[\"explanation_location_val\"],\n",
+    "                            explanation_mask_amount_val=_config[\"explanation_mask_amount_val\"],\n",
+    "                            explanation_mask_ascending_val=_config[\"explanation_mask_ascending_val\"],\n",
+    "\n",
+    "                            explanation_location_test=_config[\"explanation_location_test\"],\n",
+    "                            explanation_mask_amount_test=_config[\"explanation_mask_amount_test\"],\n",
+    "                            explanation_mask_ascending_test=_config[\"explanation_mask_ascending_test\"],                            \n",
+    "\n",
     "                            transforms_train=_config[\"transforms_train\"],\n",
     "                            transforms_val=_config[\"transforms_val\"],\n",
     "                            transforms_test=_config[\"transforms_test\"],\n",
@@ -268,10 +352,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "521ba68f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vit_base_patch16_224\n"
+     ]
+    }
+   ],
    "source": [
     "backbone_type_config_dict = OrderedDict()\n",
     "for idx, (backbone_type, backbone_type_config) in enumerate(backbone_type_config_dict_.items()):\n",
@@ -282,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a8794a43",
    "metadata": {},
    "outputs": [],
@@ -291,7 +383,7 @@
     "\n",
     "for idx, (backbone_type, backbone_type_config) in enumerate(backbone_type_config_dict.items()):\n",
     "    mask_method_dict = OrderedDict()\n",
-    "    for mask_location in [\"original\", \"pre-softmax\", \"post-softmax\", \"zero-input\"]:\n",
+    "    for mask_location in [\"pre-softmax\",]:\n",
     "        mask_method_dict[mask_location] = Surrogate(mask_location=mask_location if mask_location!=\"original\" else \"pre-softmax\",\n",
     "                                          backbone_type=backbone_type,\n",
     "                                          download_weight=_config['surrogate_download_weight'],\n",
@@ -311,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "bc939d68",
    "metadata": {},
    "outputs": [],
@@ -321,12 +413,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "f42b38e1",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 30/30 [00:31<00:00,  1.06s/batch]\n"
+     ]
+    }
+   ],
    "source": [
     "from tqdm import tqdm\n",
     "import copy\n",
@@ -364,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "2e656aee",
    "metadata": {},
    "outputs": [],
@@ -376,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "84461d4b",
    "metadata": {},
    "outputs": [],
@@ -388,14 +488,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "90a7c804",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(True, device='cuda:0')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(a==b).all()"
    ]
