--- a/notebooks/2_1_benchmarking.ipynb
+++ b/notebooks/2_1_benchmarking.ipynb
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72c897bc",
+   "id": "9ab2d59b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,7 @@
     "\n",
     "from vit_shapley.datamodules.ImageNette_datamodule import ImageNetteDataModule\n",
     "from vit_shapley.datamodules.MURA_datamodule import MURADataModule\n",
+    "from vit_shapley.datamodules.Pet_datamodule import PetDataModule\n",
     "\n",
     "from vit_shapley.modules.classifier import Classifier\n",
     "from vit_shapley.modules.classifier_masked import ClassifierMasked\n",
@@ -56,12 +57,12 @@
     "from vit_shapley.modules.explainer import Explainer\n",
     "\n",
     "from vit_shapley.config import ex\n",
-    "from vit_shapley.config import config, env_chanwkim, dataset_ImageNette, dataset_MURA\n",
+    "from vit_shapley.config import config, env_chanwkim, dataset_ImageNette, dataset_MURA, dataset_Pet\n",
     "_config=config()\n",
     "\n",
     "dataset_split=\"test\"\n",
     "parallel_mode = (0, 4)\n",
-    "backbone_to_use=[\"vit_base_patch16_224\"]\n",
+    "backbone_to_use=[\"vit_large_patch16_224\"]\n",
     "_config.update(dataset_ImageNette())\n",
     "evaluation_stage=[\"1_classifier_evaluate\",\n",
     "                  \"2_surrogate_evaluate\",\n",
@@ -71,7 +72,7 @@
     "                  \"6_noretraining\",\n",
     "                  \"7_classifiermasked\",\n",
     "                  \"8_elapsedtime\",\n",
-    "                  \"9_estimationerror\"][-1]\n",
+    "                  \"9_estimationerror\"][3]\n",
     "\n",
     "_config.update(env_chanwkim()); _config.update({'gpus_classifier':[1,],\n",
     "                                                'gpus_surrogate':[1,],\n",
@@ -134,6 +135,13 @@
     "        },\n",
     "        \"deit_base_patch16_224\":{\n",
     "\n",
+    "        },\n",
+    "        \"vit_large_patch16_224\":{\n",
+    "            \"classifier_path\": \"results/wandb_transformer_interpretability_project/1at36lgp/checkpoints/epoch=2-step=440.ckpt\",\n",
+    "            \"surrogate_path\": {\n",
+    "                \"pre-softmax\":\"results/wandb_transformer_interpretability_project/284sm0on/checkpoints/epoch=37-step=5585.ckpt\"\n",
+    "            },\n",
+    "            \"explainer_path\":\"results/wandb_transformer_interpretability_project/34gbowsg/checkpoints/epoch=91-step=13615.ckpt\"\n",
     "        }\n",
     "    })    \n",
     "elif _config[\"datasets\"]==\"MURA\":\n",
@@ -156,7 +164,29 @@
     "        \"deit_base_patch16_224\":{\n",
     "\n",
     "        }\n",
-    "    })"
+    "    })\n",
+    "    \n",
+    "elif _config[\"datasets\"]==\"Pet\":\n",
+    "    backbone_type_config_dict_=OrderedDict({\n",
+    "        \"vit_small_patch16_224\":{\n",
+    "\n",
+    "        },\n",
+    "        \"deit_small_patch16_224\":{\n",
+    "        },\n",
+    "        \"vit_base_patch16_224\":{\n",
+    "            \"classifier_path\":\"results/wandb_transformer_interpretability_project/3g01rci7/checkpoints/epoch=9-step=909.ckpt\",\n",
+    "            \"surrogate_path\": {\n",
+    "                \"original\": \"results/wandb_transformer_interpretability_project/3g01rci7/checkpoints/epoch=9-step=909.ckpt\",\n",
+    "                \"pre-softmax\": \"results/wandb_transformer_interpretability_project/146vf465/checkpoints/epoch=40-step=3730.ckpt\",\n",
+    "                #\"zero-input\": \"results/wandb_transformer_interpretability_project/2z2qs6t0/checkpoints/epoch=44-step=23219.ckpt\",\n",
+    "                #\"zero-embedding\": \"results/wandb_transformer_interpretability_project/1pbmwnvb/checkpoints/epoch=45-step=23735.ckpt\"\n",
+    "            },\n",
+    "            \"explainer_path\":\"results/wandb_transformer_interpretability_project/2oq7lhr7/checkpoints/epoch=85-step=7911.ckpt\"\n",
+    "        },\n",
+    "        \"deit_base_patch16_224\":{\n",
+    "\n",
+    "        }\n",
+    "    })    "
    ]
   },
   {
@@ -507,12 +537,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5283ff23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97856f2a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f8414a2d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from vitmedical.modules.explainer import Explainer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f94a8ef7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1683,8 +1737,7 @@
    "source": [
     "def adapt_path(path_original, dict_keys):\n",
     "    path_list = ['l0.cs.washington.edu', 'l1lambda.cs.washington.edu', 'l2lambda.cs.washington.edu',\n",
-    "                 'l3.cs.washington.edu', 'deeper.cs.washington.edu', 'sync']\n",
-    "\n",
+    "                 'l3.cs.washington.edu', 'deeper.cs.washington.edu', 'sync', '/homes/gws/chanwkim/', '/mmfs1/home/chanwkim/']\n",
     "    dict_keys=list(dict_keys)\n",
     "\n",
     "\n",
@@ -2361,6 +2414,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "67a2e209",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[path in data_keys for path in paths]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "957346ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1925c68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a9c6b77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "/homes/gws/chanwkim/, /mmfs1/home/chanwkim/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f2b8727f",
    "metadata": {
     "scrolled": true
@@ -2601,6 +2694,16 @@
     "        return masks  # (num_masks)\n",
     "    else:\n",
     "        return masks  # (num_samples, num_masks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5d91983",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluation_stage=\"5_sensitivity\""
    ]
   },
   {
