--- a/notebooks/2_1_benchmarking.ipynb
+++ b/notebooks/2_1_benchmarking.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "id": "7a263fe4",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ab2d59b",
+   "id": "72c897bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,9 +61,9 @@
     "_config=config()\n",
     "\n",
     "dataset_split=\"test\"\n",
-    "parallel_mode = (0, 4)\n",
-    "backbone_to_use=[\"vit_large_patch16_224\"]\n",
-    "_config.update(dataset_ImageNette())\n",
+    "parallel_mode = (0, 1)\n",
+    "backbone_to_use=[\"vit_base_patch16_224\"]\n",
+    "_config.update(dataset_Pet())\n",
     "evaluation_stage=[\"1_classifier_evaluate\",\n",
     "                  \"2_surrogate_evaluate\",\n",
     "                  \"3_explanation_generate\",\n",
@@ -72,11 +72,11 @@
     "                  \"6_noretraining\",\n",
     "                  \"7_classifiermasked\",\n",
     "                  \"8_elapsedtime\",\n",
-    "                  \"9_estimationerror\"][3]\n",
+    "                  \"9_estimationerror\"][1]\n",
     "\n",
-    "_config.update(env_chanwkim()); _config.update({'gpus_classifier':[1,],\n",
-    "                                                'gpus_surrogate':[1,],\n",
-    "                                                'gpus_explainer':[1,]})\n",
+    "_config.update(env_chanwkim()); _config.update({'gpus_classifier':[4,],\n",
+    "                                                'gpus_surrogate':[4,],\n",
+    "                                                'gpus_explainer':[4,]})\n",
     "\n",
     "_config.update({'classifier_backbone_type': None,\n",
     "                'classifier_download_weight': False,\n",
@@ -90,6 +90,16 @@
     "                'surrogate_load_path': None})\n",
     "_config.update({'explainer_num_mask_samples': 2,\n",
     "                'explainer_paired_mask_samples': True})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c898db2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backbone_to_use"
    ]
   },
   {
@@ -291,14 +301,12 @@
     "        \"test_data_split\": test_data_split\n",
     "    }\n",
     "\n",
-    "    if datasets == \"CheXpert\":\n",
-    "        datamodule = CheXpertDataModule(**dataset_parameters)\n",
-    "    elif datasets == \"MIMIC\":\n",
-    "        datamodule = MIMICDataModule(**dataset_parameters)\n",
-    "    elif datasets == \"MURA\":\n",
+    "    if datasets == \"MURA\":\n",
     "        datamodule = MURADataModule(**dataset_parameters)\n",
     "    elif datasets == \"ImageNette\":\n",
     "        datamodule = ImageNetteDataModule(**dataset_parameters)\n",
+    "    elif datasets == \"Pet\":\n",
+    "        datamodule = PetDataModule(**dataset_parameters)        \n",
     "    else:\n",
     "        ValueError(\"Invalid 'datasets' configuration\")\n",
     "    return datamodule\n",
@@ -371,22 +379,23 @@
     "else:\n",
     "    raise\n",
     "\n",
-    "labels = np.array([i['label'] for i in dset.data])\n",
-    "num_classes = labels.max() + 1\n",
-    "\n",
-    "images_idx_list = [np.where(labels == category)[0] for category in range(num_classes)]\n",
-    "\n",
-    "images_idx=[]\n",
-    "for classidx in range(4,4+int(10/len(images_idx_list))):\n",
-    "    images_idx+=[category_idx[classidx] for category_idx in images_idx_list]\n",
-    "\n",
-    "xy=[dset[idx] for idx in images_idx]\n",
-    "x, y = zip(*[(i['images'], i['labels']) for i in xy])\n",
-    "x = torch.stack(x)\n",
-    "y_labels=[dset.labels[i] for i in y]\n",
-    "\n",
     "\n",
     "if _config[\"datasets\"]==\"ImageNette\":\n",
+    "    \n",
+    "    labels = np.array([i['label'] for i in dset.data])\n",
+    "    num_classes = labels.max() + 1\n",
+    "\n",
+    "    images_idx_list = [np.where(labels == category)[0] for category in range(num_classes)]\n",
+    "\n",
+    "    images_idx=[]\n",
+    "    for classidx in range(4,4+int(10/len(images_idx_list))):\n",
+    "        images_idx+=[category_idx[classidx] for category_idx in images_idx_list]\n",
+    "\n",
+    "    xy=[dset[idx] for idx in images_idx]\n",
+    "    x, y = zip(*[(i['images'], i['labels']) for i in xy])\n",
+    "    x = torch.stack(x)\n",
+    "    y_labels=[dset.labels[i] for i in y]    \n",
+    "    \n",
     "    label_name_list=['Cassette player', \n",
     "                      'Garbage truck', \n",
     "                      'Tench', \n",
@@ -399,8 +408,54 @@
     "                      'Gas pump']\n",
     "    \n",
     "elif _config[\"datasets\"]==\"MURA\":\n",
-    "    label_name_list=[\"Normal\", \"Abnormal\"]"
+    "    label_name_list=[\"Normal\", \"Abnormal\"]\n",
+    "    \n",
+    "elif _config[\"datasets\"]==\"Pet\":\n",
+    "    \n",
+    "    labels = np.array([i['label'] for i in dset.data])\n",
+    "    num_classes = labels.max() + 1\n",
+    "\n",
+    "    images_idx_list = [np.where(labels == category)[0] for category in range(num_classes)]\n",
+    "\n",
+    "    images_idx=[]\n",
+    "    for classidx in range(4,4+int(37/len(images_idx_list))):\n",
+    "        images_idx+=[category_idx[classidx] for category_idx in images_idx_list]\n",
+    "\n",
+    "    xy=[dset[idx] for idx in images_idx]\n",
+    "    x, y = zip(*[(i['images'], i['labels']) for i in xy])\n",
+    "    x = torch.stack(x)\n",
+    "    y_labels=[dset.labels[i] for i in y]      "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "491839ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset=datamodule.train_dataset\n",
+    "val_dataset=datamodule.val_dataset\n",
+    "test_dataset=datamodule.test_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d35e4e80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(train_dataset), len(val_dataset), len(test_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "427faeaa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -537,36 +592,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5283ff23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97856f2a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "f8414a2d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from vitmedical.modules.explainer import Explainer"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f94a8ef7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1735,20 +1766,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# def adapt_path(path_original, dict_keys):\n",
+    "#     path_list = ['l0.cs.washington.edu', 'l1lambda.cs.washington.edu', 'l2lambda.cs.washington.edu',\n",
+    "#                  'l3.cs.washington.edu', 'deeper.cs.washington.edu', 'sync']\n",
+    "\n",
+    "#     dict_keys=list(dict_keys)\n",
+    "\n",
+    "\n",
+    "#     for path1 in path_list:\n",
+    "#         if path1 in path_original:\n",
+    "#             for path2 in path_list:\n",
+    "#                 path_replaced=path_original.replace(path1, path2)\n",
+    "#                 if path_replaced in dict_keys:\n",
+    "#                     return path_replaced\n",
+    "#     return path_original\n",
+    "#     #raise ValueError(f\"not found {path_original}\")\n",
+    "\n",
+    "import itertools\n",
+    "\n",
     "def adapt_path(path_original, dict_keys):\n",
-    "    path_list = ['l0.cs.washington.edu', 'l1lambda.cs.washington.edu', 'l2lambda.cs.washington.edu',\n",
-    "                 'l3.cs.washington.edu', 'deeper.cs.washington.edu', 'sync', '/homes/gws/chanwkim/', '/mmfs1/home/chanwkim/']\n",
-    "    dict_keys=list(dict_keys)\n",
-    "\n",
-    "\n",
-    "    for path1 in path_list:\n",
-    "        if path1 in path_original:\n",
-    "            for path2 in path_list:\n",
-    "                path_replaced=path_original.replace(path1, path2)\n",
-    "                if path_replaced in dict_keys:\n",
-    "                    return path_replaced\n",
-    "    return path_original\n",
-    "    #raise ValueError(f\"not found {path_original}\")"
+    "    path1_list = ['l0.cs.washington.edu', 'l1lambda.cs.washington.edu', 'l2lambda.cs.washington.edu',\n",
+    "                 'l3.cs.washington.edu', 'deeper.cs.washington.edu', 'sync']    \n",
+    "    path2_list = ['/mmfs1/home/chanwkim/', '/homes/gws/chanwkim/']\n",
+    "    for path1_from, path1_to in itertools.product(path1_list, path1_list):\n",
+    "        for path2_from, path2_to in itertools.product(path2_list, path2_list):\n",
+    "            if path_original.replace(path1_from, path1_to).replace(path2_from, path2_to) in dict_keys:\n",
+    "                return path_original.replace(path1_from, path1_to).replace(path2_from, path2_to)\n",
+    "    return path_original"
    ]
   },
   {
@@ -1778,15 +1822,15 @@
     "                            \"riseclassifier\", \n",
     "                            \"ours\"]\n",
     "#explanation_method_to_run_=[\"kernelshap\"]\n",
-    "# explanation_method_to_run_=[\"random\", \"attention_rollout\", \"attention_last\", \n",
-    "#                             \"LRP\", \"gradcam\", \n",
-    "#                             \"vanillaembedding\",\n",
-    "#                             \"sgembedding\",\n",
-    "#                             \"vargradembedding\",\n",
-    "#                             \"igembedding\",                           \n",
-    "#                             \"leaveoneoutclassifier\",\n",
-    "#                             \"riseclassifier\", \n",
-    "#                             \"ours\"]\n",
+    "explanation_method_to_run_=[\"random\", \"attention_rollout\", \"attention_last\", \n",
+    "                            \"LRP\", \"gradcam\", \n",
+    "                            \"vanillaembedding\",\n",
+    "                            \"sgembedding\",\n",
+    "                            \"vargradembedding\",\n",
+    "                            \"igembedding\",                           \n",
+    "                            \"leaveoneoutclassifier\",\n",
+    "                            \"riseclassifier\", \n",
+    "                            \"ours\"]\n",
     "explanation_method_to_run=[]\n",
     "explanation_method_to_run+=explanation_method_to_run_[:]\n",
     "\n",
@@ -1803,7 +1847,7 @@
    },
    "outputs": [],
    "source": [
-    "data_loader=DataLoader(dset, batch_size=1, shuffle=False, drop_last=False, num_workers=4) #16\n",
+    "data_loader=DataLoader(dset, batch_size=16, shuffle=False, drop_last=False, num_workers=4) #16\n",
     "print(len(dset))\n",
     "print(len(data_loader))"
    ]
@@ -1945,7 +1989,7 @@
     "    for _, (backbone_type, backbone_type_config) in enumerate(backbone_type_config_dict.items()):\n",
     "        result_df=pd.DataFrame(result_list_all[backbone_type])\n",
     "\n",
-    "        result_df.to_csv(f'results/4_0_surrogate_evaluate/{_config[\"datasets\"]}/{backbone_type}.csv')                            \n",
+    "        result_df.to_csv(f'results/2_surrogate_evaluate/{_config[\"datasets\"]}/{backbone_type}.csv')                            \n",
     "                        "
    ]
   },
@@ -2414,46 +2458,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67a2e209",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[path in data_keys for path in paths]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "957346ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_keys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1925c68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "paths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a9c6b77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "/homes/gws/chanwkim/, /mmfs1/home/chanwkim/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "f2b8727f",
    "metadata": {
     "scrolled": true
@@ -2699,16 +2703,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5d91983",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluation_stage=\"5_sensitivity\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a8a4bf39",
    "metadata": {
     "scrolled": true
@@ -2783,7 +2777,7 @@
     "                    for explanation_method in explanation_method_to_run:                \n",
     "                        if explanation_method==\"random\":\n",
     "                            continue\n",
-    "                        explanation=explanation_save_dict[backbone_type][explanation_method][adapt_path(path, list(explanation_save_dict[backbone_type][explanation_method].keys())[0])]['explanation']\n",
+    "                        explanation=explanation_save_dict[backbone_type][explanation_method][adapt_path(path, list(explanation_save_dict[backbone_type][explanation_method].keys()))]['explanation']\n",
     "                        explanation=explanation+np.random.RandomState(42).uniform(low=0, high=1e-40, size=explanation.shape)\n",
     "                        explanation_mask=explanation@(mask_all.T)\n",
     "\n",
@@ -2827,6 +2821,56 @@
     "                    \n",
     "             \n",
     "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "464dba4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec3006bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path1_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ab76963",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "explanation_save_dict[backbone_type][explanation_method]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db725d3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "explanation_save_dict[backbone_type][explanation_method].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ade3ce7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluation_stage"
    ]
   },
   {
@@ -3162,6 +3206,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "da8b7e89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_loader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c3cf92a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_loader.batch_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5e5e1873",
    "metadata": {
     "scrolled": false
@@ -3180,6 +3244,8 @@
     "        if dataset_split==\"test\":\n",
     "            if idx>int(1000/data_loader.batch_size+0.5):\n",
     "                break\n",
+    "        if idx==7:\n",
+    "            break\n",
     "        if (idx%parallel_mode[1])!=parallel_mode[0]:\n",
     "            continue\n",
     "            \n",
@@ -3428,6 +3494,16 @@
     "    #             values, _, _=explainer_dict[backbone_type](torch.Tensor(image).unsqueeze(0).to(explainer_dict[backbone_type].device))\n",
     "    #             values=values.cpu().numpy().transpose(0,2,1).squeeze(0)\n",
     "    #         values_ours=(values, time.time()-start_time)                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd3c4bd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elapsedtime_save_dict[backbone_type].keys()"
    ]
   },
   {
